added few page and designed it

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.15.4/css/all.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oversize Shop</title>
 </head>
@@ -11,6 +17,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/index.tsx"></script>
+  <script src="https://kit.fontawesome.com/d6a7776f68.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
